# CPakReader

./: CMakeLists.txt  CPakReader.cpp  README.md
libraries/xxhash/: xxhash.lib
src/: CFileStream.h  CFileTree.h  CIndex.cpp  CIndex.h  CMemoryStream.h  CPackage.cpp  CPackage.h  CPackageFile.h  CPackageFileReader.h  CPackageFileStream.h  CStream.h  EAssetType.h  ECompressionMethod.h  EErrorCode.h  EReadType.h  FPakFile.h  HAES.h  HAlign.h  HStringHash.h
src/Exports/: UCurveTable.cpp  UCurveTable.h  UDataTable.cpp  UDataTable.h  UObject.cpp  UObject.h  USoundWave.cpp  USoundWave.h  UStringTable.cpp  UStringTable.h  UTexture2D.cpp  UTexture2D.h
src/Objects/: EBulkDataFlags.h  ECompressionFlags.h  ECurveTableMode.h  EDateTimeStyle.h  EFormatArgumentType.h  EObjectFlags.h  EPackageFlags.h  EPakVersion.h  EPixelFormat.h  ERoundingMode.h  ETextFlag.h  ETextGender.h  ETextHistoryType.h  ETransformType.h  EVirtualTextureCodec.h  FAESKey.h  FByteBulkData.h  FColor.h  FCompressedChunk.h  FCustomVersion.h  FCustomVersionContainer.h  FDateTime.h  FEngineVersion.h  FFormatArgumentData.h  FFormatArgumentValue.h  FFormatContainer.h  FFormatNamedArguments.h  FGameplayTagContainer.h  FGenerationInfo.h  FGuid.h  FIntPoint.h  FLinearColor.h  FName.cpp  FName.h  FNameEntrySerialized.h  FNumberFormattingOptions.h  FObjectExport.h  FObjectImport.h  FObjectResource.h  FOptTexturePlatformData.h  (+24 more)
src/Properties/: PArray.h  PBool.h  PByte.h  PDelegate.h  PDouble.h  PEnum.h  PFloat.h  PInt.h  PInt16.h  PInt64.h  PInt8.h  PInterface.h  PLazyObject.h  PMap.h  PMulticastDelegate.h  PName.h  PObject.h  PSet.h  PSoftObject.h  PSoftObjectMap.h  PStr.h  PStruct.h  PText.h  PUInt16.h  PUInt32.h  PUInt64.h
src/Readers/: RAssetReader.cpp  RAssetReader.h  RPakReader.cpp  RPakReader.h
